WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70828
“Open with” item missing from PDF context menu in some cases
https://bugs.webkit.org/show_bug.cgi?id=70828
Summary
“Open with” item missing from PDF context menu in some cases
John Sullivan
Reported
2011-10-25 10:43:03 PDT
This is in radar as 10034302. To reproduce: 1. In Snow Leopard, load a PDF page in Safari. 2. Control-click or right-click on a blank area of the page (not on text) to bring up a context menu. The context menu does not include an “Open With” item. (If in step 2 you click on text instead of background, the “Open With” item is present.)
Attachments
Patch to insert the Open With item at the top of the menu if no Copy item is present.
(4.43 KB, patch)
2011-10-25 10:48 PDT
,
John Sullivan
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2011-10-25 10:48:16 PDT
Created
attachment 112358
[details]
Patch to insert the Open With item at the top of the menu if no Copy item is present.
John Sullivan
Comment 2
2011-10-25 10:54:58 PDT
Fixed in 98362.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug