"Open with" item missing from PDF context menu in some cases https://bugs.webkit.org/show_bug.cgi?id=70828 <rdar://problem/10034302>

Reviewed by Anders Carlsson.

* UIProcess/API/mac/PDFViewController.mm:
(insertOpenWithDefaultPDFMenuItem):
New helper function, extracted from -menuForEvent:. Identical to original code except
that it inserts the item at a specified index, rather than always at the end.
(-[WKPDFView menuForEvent:]):
Now keeps track of whether the Open With item has been inserted while iterating through
the PDFKit-supplied menu items looking for a "Copy" item. If a "Copy" item is not found,
inserts the Open With item at the top of the context menu.



Canonical link: https://commits.webkit.org/87023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98362 268f45cc-cd09-0410-ab3c-d52691b4dbfc